--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "counter",
+  "name": "cc-tracker",
+  "description": "Swaroop's application to track credit card rewards",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
