--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^5.3.0",
+    "csv-stringify": "^6.4.0",
     "firebase": "^9.23.0",
+    "fs-extra": "^11.1.1",
     "immer": "9.0.5",
     "lodash": "^4.17.21",
     "prop-types": "15.7.2",
@@ -18,10 +20,10 @@
     "react-scripts": "^5.0.1",
     "react-toastify": "7.0.4",
     "redux": "4.1.0",
+    "redux-immutable-state-invariant": "2.1.0",
     "redux-thunk": "2.3.0",
     "reselect": "4.0.0",
-    "uid": "^2.0.2",
-    "redux-immutable-state-invariant": "2.1.0"
+    "uid": "^2.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
