migrate swaroop's cards

--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "basedata": "node --unhandled-rejections=strict src/tools/excelDataMigrator.js"
   },
   "eslintConfig": {
     "extends": [
