--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "basedata": "tsc && node dist/tools/excelDataMigrator.js",
-    "test-card": "tsc && node dist/ts/test.js"
+    "test-card": "tsc && node dist/ts/createTestCard.js"
 
   },
   "eslintConfig": {
