--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "5.2.0",
     "react-scripts": "^5.0.1",
     "react-toastify": "7.0.4",
+    "reactfire": "^4.2.3",
     "redux": "4.1.0",
     "redux-immutable-state-invariant": "2.1.0",
     "redux-thunk": "2.3.0",
