--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "aws-sdk": "^2.1451.0",
     "bootstrap": "^5.3.0",
     "csv-stringify": "^6.4.0",
     "firebase": "^9.23.0",
