--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lodash": "^4.17.21",
     "prop-types": "15.7.2",
     "react": "17.0.2",
+    "react-avatar-editor": "^13.0.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "17.0.2",
     "react-icons": "^4.9.0",
