--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@sendgrid/mail": "^8.1.3",
     "aws-sdk": "^2.1451.0",
     "bootstrap": "^5.3.0",
     "csv-stringify": "^6.4.0",
+    "dotenv": "^16.4.5",
     "firebase": "^9.23.0",
     "fs-extra": "^11.1.1",
     "immer": "9.0.5",
@@ -34,7 +36,9 @@
     "test:start": "PORT=3001 REACT_APP_ENV_TEST=test react-scripts start",
     "eject": "react-scripts eject",
     "basedata": "tsc && node dist/tools/excelDataMigrator.js",
-    "test-card": "tsc && node dist/ts/createTestCard.js"
+    "test-card": "tsc && node dist/ts/createTestCard.js",
+    "runCloudFn": "node functions/index.js",
+    "testSend": "node functions/send.js"
   },
   "eslintConfig": {
     "extends": [
