--- a/functions/package.json
+++ b/functions/package.json
@@ -6,16 +6,15 @@
     "shell": "firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
-    "logs": "firebase functions:log",
-    "nodemon": "nodemon index.js",
-    "foo": "node send.js"
+    "logs": "firebase functions:log"
   },
   "engines": {
     "node": "18"
   },
-  "main": "index.js",
+  "main": "src/index.js",
   "dependencies": {
     "@sendgrid/mail": "^8.1.3",
+    "dotenv": "^16.4.5",
     "firebase-admin": "^11.8.0",
     "firebase-functions": "^4.3.1",
     "nodemon": "^3.1.7"
