--- a/functions/package.json
+++ b/functions/package.json
@@ -17,7 +17,8 @@
     "dotenv": "^16.4.5",
     "firebase-admin": "^11.8.0",
     "firebase-functions": "^4.3.1",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "uid": "^2.0.2"
   },
   "devDependencies": {
     "firebase-functions-test": "^3.1.0"
