more migration and nounsed import corrections

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
     "noEmit": true,
     "skipLibCheck": true,
     "jsx": "react-jsx",
-    "lib": ["dom", "es2015"]
+    "lib": ["dom", "es2015"],
+    "noUnusedLocals": true
   },
   "exclude": ["node_modules"]
   // "files": ["src/tools/excelDataMigrator.js", "src/ts/createTestCard.js"]
