--- a/functions/package.json
+++ b/functions/package.json
@@ -11,7 +11,7 @@
   "engines": {
     "node": "18"
   },
-  "main": "src/index.js",
+  "main": "src/index.tsx",
   "dependencies": {
     "@sendgrid/mail": "^8.1.3",
     "dotenv": "^16.4.5",
